[gd_scene load_steps=17 format=3 uid="uid://c2vvri61ur2c7"]

[ext_resource type="Script" uid="uid://cmcjjybprpyk8" path="res://toy_ball.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://derflf4mg4ktk" path="res://imgs/bouncing_ball/HH_bouncing_ball_0000.png" id="2"]
[ext_resource type="Texture2D" uid="uid://dvgs753p8pdp" path="res://imgs/bouncing_ball/HH_bouncing_ball_0001.png" id="3"]
[ext_resource type="Texture2D" uid="uid://qr5hq8qombsm" path="res://imgs/bouncing_ball/HH_bouncing_ball_0002.png" id="4"]
[ext_resource type="Texture2D" uid="uid://ck0qqnjmchx4j" path="res://imgs/bouncing_ball/HH_bouncing_ball_0003.png" id="5"]
[ext_resource type="Texture2D" uid="uid://klkbtfth2od7" path="res://imgs/bouncing_ball/HH_bouncing_ball_0004.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bxlnbe1s2hoin" path="res://imgs/bouncing_ball/HH_bouncing_ball_0005.png" id="7"]
[ext_resource type="Texture2D" uid="uid://4iqeus324yr0" path="res://imgs/bouncing_ball/HH_bouncing_ball_0006.png" id="8"]
[ext_resource type="Texture2D" uid="uid://c10qnr7yi5olh" path="res://imgs/bouncing_ball/HH_bouncing_ball_0007.png" id="9"]
[ext_resource type="Texture2D" uid="uid://c1yvqwci1a3xv" path="res://imgs/bouncing_ball/HH_bouncing_ball_0008.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cng37yjyqtheh" path="res://imgs/bouncing_ball/hit/HH_bouncing_ball_0000.png" id="11"]

[sub_resource type="CircleShape2D" id="CircleShape2D_abc12"]
radius = 20.0

[sub_resource type="Animation" id="Animation_3"]
resource_name = "hit"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("11")]
}

[sub_resource type="Animation" id="Animation_1"]
resource_name = "idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2")]
}

[sub_resource type="Animation" id="Animation_2"]
resource_name = "roll"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("3"), ExtResource("4"), ExtResource("5"), ExtResource("6"), ExtResource("7"), ExtResource("8"), ExtResource("9"), ExtResource("10")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
&"hit": SubResource("Animation_3"),
&"idle": SubResource("Animation_1"),
&"roll": SubResource("Animation_2")
}

[node name="ToyBall" type="Area2D"]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_abc12")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_1")
}
autoplay = "idle"

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
[connection signal="ready" from="Timer" to="." method="_on_timer_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
